# imagerouter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/imagerouter/: __init__.py  cli.py  client.py  estimator.py  exceptions.py  models.py  utils.py
src/imagerouter/generators/: __init__.py  image.py  video.py
tests/: __init__.py
tests/fixtures/: __init__.py  mock_responses.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_client.py  test_estimator.py  test_exceptions.py  test_generators.py  test_models.py  test_utils.py
